--- a/pixelegg/mobile/fw_mobile.less
+++ b/pixelegg/mobile/fw_mobile.less
@@ -385,7 +385,7 @@
 		}
 		#egw_fw_basecontainer.sidebar-toggle {
 			#egw_fw_top_toolbar {
-				#egwpopup_fw_notifications {display: none !important;}
+				#egwpopup_fw_notifications, #egw_fw_topmenu_info_items {display: none !important;}
 				div#egw_fw_menu {
 					background-image: url(../images/topmenu_items/mobile/menu.svg);
 					width: 50px;
@@ -442,6 +442,24 @@
 					margin: 0;
 					margin-left: 15px;
 					.popup_note {display: none;}
+				}
+				#egw_fw_topmenu_info_items {
+					height: 50px;
+					.topmenu_info_item {
+						border: 0;
+						height: 50px;
+					}
+					#topmenu_info_print_title {
+						span {
+							height: 50px;
+						}
+					}
+					#topmenu_info_user_avatar {
+						span {
+							margin-top: 4px;
+							margin-left: 0px;
+						}
+					}
 				}
 				div#egw_fw_topmenu_items {
 					ul {
@@ -510,6 +528,27 @@
 			.egw_fw_ui_sidemenu_entry_apps> div{
 				margin-bottom: 5px;
 			}
+			#egw_fw_toggler {
+				height: 50px;
+				span {
+					top: 15px;
+				}
+			}
+		}
+		#egw_fw_basecontainer.egw_fw_sidebar_toggleOn {
+			#egw_fw_toggler {
+				height: 50px;
+				background-color: transparent;
+				span {
+					top: 15px;
+				}
+			}
+
+		}
+		#egw_fw_basecontainer.egw_fw_sidebar_toggleOn #egw_fw_toggler span,
+		#egw_fw_basecontainer.egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span{
+			background-color: white;
+			&:before, &:after {background-color: white !important}
 		}
 
 
